InfraPlatform/activemq/v5/cf-activemq.yaml
AWSTemplateFormatVersion: 2010-09-09
## VPC-id, Subnets ID, ClusterSharedNodeSecurityGroup name, Cluser Control Plane name and Control Plane SecurityGroup name to be updated as per requirements.
Description: ActiveMQ Setup CF Template - V5

Parameters:
  AppShortName:
    Type: String
    Description: AppShortName

  EnvName:
    Type: String
    Description: Environment
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c

  VpcId:
    Type: String
    Description: VpcId of your existing Virtual Private Cloud (VPC)

  VPCSubnetCidrAppAZ1:
    Type: String
    Description: VPC Subnet for App AZ1

  VPCSubnetCidrAppAZ2:
    Type: String
    Description: VPC Subnet for App AZ2

  VPCSubnetCidrAppAZ3:
    Type: String
    Description: VPC Subnet for App AZ3

  VPCSubnetIdappAZ1:
    Type: String
    Description: VPC Subnet id for App AZ1

  VPCSubnetIdappAZ2:
    Type: String
    Description: VPC Subnet id for App AZ2

  DeploymentServer01:
    Type: String
    Description: Deployment Server IP
  
  InstanceType:
    Type: String
    Description: InstanceType
  
  MQPassword:
    Type: String
    Description: Password for ActiveMQ
    NoEcho: true

  DeploymentMode:
    Type: String
    Description: Choose ActiveMQ Deployment Mode
    Default: "SINGLE_INSTANCE"
    AllowedValues:
      - SINGLE_INSTANCE
      - ACTIVE_STANDBY_MULTI_AZ
  
  EngineVersion:
    Type: String
    Default: "5.18"
    Description: ActiveMQ Engine Version (as supported by AWS MQ)
  
  FirstMQDeployment:
    Type: String
    Default: "false"
    Description: Is this the first ActiveMQ deployment in this AWS account? (Creates AmazonMQ Log Resource Policy)
    AllowedValues:
      - "true"
      - "false"

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasSubnetCidrAppAZ3: !Not [!Equals [!Ref VPCSubnetCidrAppAZ3, ""]]
  IsSingleInstance: !Equals [!Ref DeploymentMode, "SINGLE_INSTANCE"]
  IsFirstMQDeployment: !Equals [!Ref FirstMQDeployment, "true"]

Resources:
# Active MQ
## ActiveMQ SecurityGroup
  ActiveMQSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Security Group for ActiveMQ
      GroupName: !Sub ${AppShortName}-${EnvName}-ActiveMQ
      Tags: 
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-ActiveMQ
        - Key: IaCVersion
          Value: InfraPlatform-ActiveMQ-v5
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 61617
          ToPort: 61617
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 61617
          ToPort: 61617
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: App Subnet AZ2
        - !If
          - HasSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 61617
            ToPort: 61617
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: 8162
          ToPort: 8162
          CidrIp: !Ref DeploymentServer01
          Description: Deployment server 01

  BasicBroker:
    Type: 'AWS::AmazonMQ::Broker'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AutoMinorVersionUpgrade: true
      BrokerName: !Sub ${AppShortName}-${EnvName}-ActiveMQ
      DeploymentMode: !Ref DeploymentMode
      EngineType: ACTIVEMQ
      EngineVersion: !Ref EngineVersion
      HostInstanceType: !Ref InstanceType
      Logs:
        General: true
        Audit: true
      PubliclyAccessible: false
      SecurityGroups:
        - !GetAtt ActiveMQSecurityGroup.GroupId
      SubnetIds:
        !If 
          - IsSingleInstance
          - 
            - !Ref VPCSubnetIdappAZ1
          - 
            - !Ref VPCSubnetIdappAZ1
            - !Ref VPCSubnetIdappAZ2
        
      Users:
        - Password: !Ref MQPassword
          Username: !Sub ${AppShortName}-${EnvName}-activemq-client
          ConsoleAccess: false
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ActiveMQ-v5

  AmazonMQLogResourcePolicy:
    Type: AWS::Logs::ResourcePolicy
    Condition: IsFirstMQDeployment
    Properties:
      PolicyName: AmazonMQ-logs
      PolicyDocument: |
        {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": { "Service": "mq.amazonaws.com" },
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Resource": "arn:aws:logs:*:*:log-group:/aws/amazonmq/*"
            }
          ]
        }
